--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diabetes Checkup - Input</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container input-page">
@@ -101,6 +101,6 @@
         </div>
     </div>
 
-    <script src="/input-script.js"></script>
+    <script src="input-script.js"></script>
 </body>
 </html>
