--- a/frontend/results.html
+++ b/frontend/results.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diabetes Checkup - Results</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container results-page">
@@ -57,6 +57,6 @@
         </div>
     </div>
 
-    <script src="/results-script.js"></script>
+    <script src="results-script.js"></script>
 </body>
 </html>
